<?xml version="1.0"?>
<package format="2">
  <name>launchpad</name>
  <version>1.0.0</version>
  <description>This package takes serial data from TI Launchpad and publishes it to ultrasound topic</description>

  <maintainer email="carpit680@gmail.com">arpit</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>serial_parser</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>serial</build_export_depend>
  <build_export_depend>serial_parser</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>serial_parser</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
